[tool.poetry]
name = "play_with_robotpy"
version = "0.1.0"
description = ""
authors = ["marioux <marcandrioux@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
robotpy = ">=2023.4.3.1"
robotpy-apriltag = ">=2023.4.3.0"
robotpy-commands-v2 = ">=2023.4.3.0"
robotpy-cscore = ">=2023.4.3.0"
robotpy-ctre = ">=2023.1.0"
robotpy-hal = ">=2023.4.3.0"
robotpy-halsim-ds-socket = ">=2023.4.3.0"
robotpy-halsim-gui = ">=2023.4.3.0"
robotpy-halsim-ws = ">=2023.4.3.0"
robotpy-installer = ">=2023.0.3"
robotpy-navx = ">=2023.0.3"
robotpy-pathplannerlib = ">=2023.3.4.1"
robotpy-photonvision = ">=2023.4.2"
robotpy-playingwithfusion = ">=2023.1.0"
robotpy-rev = ">=2023.1.3.2"
robotpy-wpilib-utilities = ">=2023.1.0"
robotpy-wpimath = ">=2023.4.3.0"
robotpy-wpinet = ">=2023.4.3.0"
robotpy-wpiutil = ">=2023.4.3.0"
wpilib = ">=2023.4.3.0"
coverage = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
